z-index fixes

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -34,7 +34,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    z-index: 100;
+    z-index: 1;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
