--- a/styles/sidepanel.css
+++ b/styles/sidepanel.css
@@ -1,7 +1,7 @@
 .sidepanel  {
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     height: 250px;
     top: 0;
     left: 0;
